discussion/kv_engine/158220/158220_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36377: Replace KVStore::inTransaction

Currently KVStore::inTransaction attempts to guard proper usage of
the KVStore. It's not fit for allowing multiple flushers to run per
KVStore. Replace KVStore::inTransaction with an array of atmoic bools
that:

1) Keeps the same "guarding" of the KVStore API usage
2) Prevents concurrent flushing of the same vBucket

Change-Id: Ibe2c18f29150d059edb57b9cba6cc7577f539986

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-29 16:52:11.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 17:13:58.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38174/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc(523): error C2819: type "TransactionContext" does not have an overloaded member "operator ->" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38174/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10951/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "CouchKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:765:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "CouchKVStore::del");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:750:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "MagmaKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:950:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "MagmaKVStore::del");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:665:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "RocksDBKVStore::set");
                               ^~
                               .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:760:32: error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
    checkIfInTransaction(txnCtx->vbid, "RocksDBKVStore::del");
                               ^~
                               .

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10951/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10951/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32547/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12544/ : FAILURE

Compile error at [2021-07-29T17:10:26.479Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: base operand of ?->? has non-pointer type ?TransactionContext?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12726/ : FAILURE

Compile error at [2021-07-29T17:11:17.539Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: base operand of ?->? has non-pointer type ?TransactionContext?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12726/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13079/ : FAILURE

Compile error at [2021-07-29T17:09:03.499Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13079/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20626/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11659/ : FAILURE

Compile error at [2021-07-29T16:54:11.378Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11659/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/559/ : FAILURE

Compile error at [2021-07-29T16:56:24.631Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: base operand of ?->? has non-pointer type ?TransactionContext?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/559/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/573/ : FAILURE

Compile error at [2021-07-29T17:09:26.828Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:523:32:
error: member reference type "TransactionContext" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/573/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9618/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
